--- a/kekse.tex
+++ b/kekse.tex
@@ -1,5 +1,36 @@
 \section{Kekse}
 
+\begin{recipe}{Apfel-Kokos-Makronen}
+  \ingredient{125\,g Weizenmehl}
+  \ingredient{2\,TL Backpulver}
+  mischen, in eine Rührschüssel sieben.
+
+  \ingredient{125\,g Zucker}
+  \ingredient{1 Pkg. Vanillezucker}
+  \ingredient{1 Ei (Größe M)}
+  \ingredient{125\,g weiche Butter}
+  hinzufügen, mit Handrührgerät mit Rührbesen zunächst auf niedriger,
+  dann auf höchster Stufe gut durcharbeiten.
+
+  \ingredient[Kokos]{125\,g Kokosraspeln}
+  \ingredient[Haferflocken]{125\,g Haferflocken}
+  hinzufügen.
+  
+  \ingredient[Apfel]{50\,g Apfelringe, klein geschnitten}
+  \ingredient[Rumrosinen]{60\,g Rumrosinen}
+  \ingredient[Rum]{4\,EL Rum}
+  vermischen und unter den Teig rühren.
+
+  Den Teig mit 2 Teelöffeln in kanpp walnussgroßen Häufchen auf
+  Backbleche setzen, dabei genügend Abstand zwischen den Teighäufchen
+  lassen.
+  
+  Bei 180° (Ober-"/Unterhitze) ca. 15 Minuten backen.
+
+\end{recipe}
+
+
+
 \begin{recipe}{Ghanataler}
   \ingredient{250\,g Mehl}
   \ingredient[Kakao]{2\,EL Kakaopulver}
@@ -48,7 +79,7 @@
   unterrühren.
 
   \ingredient{50\,g Mehl}
-  \ingredient{25\,g Haferflocken}
+  \ingredient[Haferflocken]{25\,g Haferflocken}
   \ingredient[Mandel]{50\,g gehobelte Mandeln}
   mischen, unterheben.
 
@@ -267,6 +298,89 @@
   \ingredient{1 Pkg. Vanillezucker}
   mischen, sieben. Die heissen Kipferl darin wenden und auf einem
   Kuchenrost erkalten lassen.
+\end{recipe}
+
+
+
+\begin{recipe}{Vanille-Kipferl}
+  \ingredient{65\,g weiche Butter}
+  \ingredient{40\,g Zucker}
+  \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
+  \ingredient{1 Prise Salz}
+  \ingredient{1 Ei (Größe M)}
+  \ingredient{75\,g Weizenmehl}
+  in eine Schüssel geben und gut verrühren. Den Teig mit einem
+  Teigspachtel in die Vertiefungen streichen.
+
+  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
+  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
+  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
+  
+  Bei 170° (Ober-"/Unterhitze) im vorgeheizten Backofen ca. 13 Minuten
+  goldgelb backen. Anschließend kurz abkühlen lassen, auf eine Unterlage
+  stürzen und ganz abkühlen lassen.
+  
+  \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
+  \ingredient{1--2\,EL Puderzucker}
+  mischen, Vanille-Kipferl damit bestäuben.
+
+  Für ein Blech (Kaiser).
+\end{recipe}
+
+
+
+\begin{recipe}{Vanille-Kokos-Kipferl}
+  \ingredient{65\,g weiche Butter}
+  \ingredient{40\,g Zucker}
+  \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
+  \ingredient{1 Prise Salz}
+  \ingredient{1 Ei (Größe M)}
+  \ingredient{55\,g Weizenmehl}
+  \ingredient[Kokos]{20\,g Kokosmehl}
+  in eine Schüssel geben und gut verrühren. Den Teig mit einem
+  Teigspachtel in die Vertiefungen streichen.
+
+  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
+  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
+  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
+  
+  Bei 170° (Ober-"/Unterhitze) im vorgeheizten Backofen ca. 13 Minuten
+  goldgelb backen. Anschließend kurz abkühlen lassen, auf eine Unterlage
+  stürzen und ganz abkühlen lassen.
+  
+  \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
+  \ingredient{1--2\,EL Puderzucker}
+  mischen, Vanille-Kipferl damit bestäuben.
+
+  Für ein Blech (Kaiser).
+\end{recipe}
+
+
+
+\begin{recipe}{Vanille-Schoko-Kipferl}
+  \ingredient{65\,g weiche Butter}
+  \ingredient{40\,g Zucker}
+  \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
+  \ingredient{1 Prise Salz}
+  \ingredient{1 Ei (Größe M)}
+  \ingredient{65\,g Weizenmehl}
+  \ingredient[Kakao]{10\,g Kakaopulver, schwach entölt}
+  in eine Schüssel geben und gut verrühren. Den Teig mit einem
+  Teigspachtel in die Vertiefungen streichen.
+
+  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
+  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
+  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
+  
+  Bei 170° (Ober-"/Unterhitze) im vorgeheizten Backofen ca. 13 Minuten
+  goldgelb backen. Anschließend kurz abkühlen lassen, auf eine Unterlage
+  stürzen und ganz abkühlen lassen.
+  
+  \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
+  \ingredient{1--2\,EL Puderzucker}
+  mischen, Vanille-Kipferl damit bestäuben.
+
+  Für ein Blech (Kaiser).
 \end{recipe}
 
 
