--- a/kekse.tex
+++ b/kekse.tex
@@ -303,6 +303,11 @@
 
 
 \begin{recipe}{Vanille-Kipferl}
+  \ingredient{flüssige Butter}
+  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
+  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
+  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
+  
   \ingredient{65\,g weiche Butter}
   \ingredient{40\,g Zucker}
   \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
@@ -312,10 +317,6 @@
   in eine Schüssel geben und gut verrühren. Den Teig mit einem
   Teigspachtel in die Vertiefungen streichen.
 
-  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
-  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
-  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
-  
   Bei 170° (Ober-"/Unterhitze) im vorgeheizten Backofen ca. 13 Minuten
   goldgelb backen. Anschließend kurz abkühlen lassen, auf eine Unterlage
   stürzen und ganz abkühlen lassen.
@@ -330,6 +331,11 @@
 
 
 \begin{recipe}{Vanille-Kokos-Kipferl}
+  \ingredient{flüssige Butter}
+  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
+  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
+  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
+  
   \ingredient{65\,g weiche Butter}
   \ingredient{40\,g Zucker}
   \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
@@ -340,10 +346,6 @@
   in eine Schüssel geben und gut verrühren. Den Teig mit einem
   Teigspachtel in die Vertiefungen streichen.
 
-  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
-  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
-  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
-  
   Bei 170° (Ober-"/Unterhitze) im vorgeheizten Backofen ca. 13 Minuten
   goldgelb backen. Anschließend kurz abkühlen lassen, auf eine Unterlage
   stürzen und ganz abkühlen lassen.
@@ -358,6 +360,11 @@
 
 
 \begin{recipe}{Vanille-Schoko-Kipferl}
+  \ingredient{flüssige Butter}
+  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
+  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
+  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
+  
   \ingredient{65\,g weiche Butter}
   \ingredient{40\,g Zucker}
   \ingredient{\sfrac{1}{2} Pkg. Bourbon-Vanillezucker}
@@ -368,10 +375,6 @@
   in eine Schüssel geben und gut verrühren. Den Teig mit einem
   Teigspachtel in die Vertiefungen streichen.
 
-  Die Vertiefungen des Vanillekipferlblechs mit flüssiger Butter
-  einfetten. Das Blech für ca. 10 Minuten kühl stellen (am besten im
-  Kühlschrank), damit sich der Teig leichter verstreichen lässt.
-  
   Bei 170° (Ober-"/Unterhitze) im vorgeheizten Backofen ca. 13 Minuten
   goldgelb backen. Anschließend kurz abkühlen lassen, auf eine Unterlage
   stürzen und ganz abkühlen lassen.
