--- a/muffins.tex
+++ b/muffins.tex
@@ -1,5 +1,23 @@
 \section{Muffins}
 
+\begin{recipe}{Muffins (Basisrezept)}
+  \ingredient{200\,g Weizenmehl}
+  \ingredient{2 TL Backpulver}
+  vermischen, in eine Rührschüssel sieben.
+  
+  \ingredient{100\,g Zucker}
+  \ingredient{1 Pkg. Vanillezucker}
+  \ingredient{125\,g Butter, weich}
+  \ingredient{3 EL Milch}
+  \ingredient{3 Eier}
+  dazugeben und zu einer glatten Masse verrühren.
+
+  Bei 180° (Ober-"/Unterhitze) ca. 15 Minuten im vorgeheizten
+  Backofen backen.
+  
+  Ergibt 12 Stück.
+\end{recipe}
+  
 \begin{recipe}{American Chocolate-Chip-Muffins}
   \ingredient{300\,g Weizenmehl}
   \ingredient{2\sfrac{1}{4} TL Backpulver}
