Anpassung Eierschekce; neues Rezept

--- a/kuchen.tex
+++ b/kuchen.tex
@@ -89,13 +89,13 @@
   ruhen lassen.
 
   Während der Ruhezeit
-  \ingredient{60\,g Butter}
+  \ingredient{75\,g Butter}
   flüssig werden lassen und mit
-  \ingredient[Quark]{400\,g Speisequark}
-  \ingredient{60\,g Zucker}
-  \ingredient{20\,g Weizenmehl}
-  \ingredient{20\,g Puddingpulver Vanille}
-  \ingredient{40\,ml Milch}
+  \ingredient[Quark]{500\,g Speisequark}
+  \ingredient{75\,g Zucker}
+  \ingredient{25\,g Weizenmehl}
+  \ingredient{25\,g Puddingpulver Vanille}
+  \ingredient{50\,ml Milch}
   \ingredient{2 Eier}
   zu einer glatten Masse rühren.
   \ingredient{1 Prise Salz}
@@ -112,12 +112,12 @@
   zum Kochen bringen.
 
   \ingredient{100\,ml Milch}
-  \ingredient{70\,g Puddingpulver Vanille}
+  \ingredient{2 Pkg. Puddingpulver Vanille}
   anrühren, zur gezuckerten Milch geben, einmal aufkochen lassen, dann
   vom Herd nehmen.
   
   \ingredient{7 Eigelb}
-  \ingredient{230\,g Butter}
+  \ingredient{250\,g Butter}
   in den heißen Pudding geben, gut verrühren.
   
   \ingredient{7 Eiweiß}
@@ -173,6 +173,38 @@
 \end{recipe}
 
 
+\begin{recipe}{Ingwerkuchen}
+  \ingredient{250\,g Butter}
+  schaumig rühren.
+  
+  \ingredient{250\,g Zucker}
+  \ingredient{4 Eier}
+  abwechselnd hinzugeben.
+  
+  \ingredient[Ingwer]{150\,g kandierter Ingwer}
+  \ingredient[Zitronat]{25\,g Zitronat}
+  \ingredient[Orangeat]{25\,g Orangeat}
+  klein schneiden, mit
+  \ingredient{ger. Zitronenschale}
+  \ingredient[Cashewnuss]{50\,g fein gehackte Cashewnüsse oder Mandeln}
+  \ingredient[Arrak]{3\,EL Arrak oder Rum}
+  hinzugeben.
+  
+  \ingredient{250\,g Mehl}
+  \ingredient{1\,TL Backpulver}
+  sieben, unter den Teig rühren.
+
+  Den Teig in eine gebutterte und bemehlte Kastenform füllen. Bei 200°C
+  anbacken, dann bei 150--175°C ca. 1 Stunde auf unterer Schiene backen.
+
+  Nach dem Backen in der Form etwas abdampfen lassen, dann auf ein
+  Gitter stürzen und erkalten lassen. Nach dem Erkalten mit
+  \ingredient{Puderzucker}
+  bestreuen.
+\end{recipe}
+
+
+
 \begin{recipe}{Mandarinenblechkuchen}
   \ingredient{350\,g Mehl}
   \ingredient{200\,g Butter}
@@ -197,5 +229,5 @@
   \ingredient{175\,g Zucker}
   zu Teig verrühren, als Streussel auf der Füllung verteilen.
   
-  Bei 170° (Umluft) ca. 25-35 Minuten backen.  
+  Bei 170° (Umluft) ca. 25--35 Minuten backen.  
 \end{recipe}
