--- a/torten.tex
+++ b/torten.tex
@@ -39,8 +39,9 @@
   mischen und unterheben.
 
   Den Teig in eine Springform füllen (Boden mit Papier auslegen) und bei
-  170° (Ober-"/Unterhitze) backen. Falls der Boden zu dunkel wird, mit
-  Papier abdecken. Den Boden abkühlen lassen und halbieren.
+  170° (Ober-"/Unterhitze) ca. 60 Minuten backen. Falls der Boden zu
+  dunkel wird, mit Papier abdecken. Den Boden abkühlen lassen und
+  halbieren.
 
   \ingredient{300\,g Konditorsahne}
   \ingredient{1 Pkg. Sahnesteif}
