Apfel-Zimt-Muffins; Webservice

--- a/Buch/rezeptbuch.tex
+++ b/Buch/rezeptbuch.tex
@@ -16,6 +16,10 @@
 \begin{document}
 
 \title{\bfseries\Huge Rezepte}
+\author{
+  Ralf Döblitz\\[1cm]
+  \tt{http://rezepte.doeblitz.net/rezeptbuch.pdf}
+}
 \maketitle
 \tableofcontents
 
