--- a/Einzel/rezeptsammlung.tex
+++ b/Einzel/rezeptsammlung.tex
@@ -14,6 +14,10 @@
 \begin{document}
 
 \title{\bfseries\Huge Rezepte}
+\author{
+  Ralf Döblitz\\[1cm]
+  \tt{http://rezepte.doeblitz.net/rezeptsammlung.pdf}
+}
 \maketitle
 \tableofcontents
 
