--- a/muffins.tex
+++ b/muffins.tex
@@ -47,6 +47,32 @@
   Ergibt 24 Stück.
 \end{recipe}
 
+\begin{recipe}{Apfel-Zimt-Muffins}
+  \ingredient{125\,g Butter}
+  zerlassen, Muffinform damit einfetten, restliche Butter abkühlen
+  lassen.
+  \ingredient{125\,g Zucker}
+  \ingredient{1 Prise Salz}
+  \ingredient{250\,g Mehl}
+  \ingredient{\sfrac{1}{2} Pkg. Backpulver}
+  \ingredient{1 TL gemahlener Zimt}
+  mischen.
+  \ingredient{3 säuerliche Äpfel}
+  schälen, entkernen und klein schneiden. Unter die Mehlmischung heben.
+  \ingredient{2 Eier}
+  verquirlen, flüssige Butter und
+  \ingredient{50\,ml Buttermilch}
+  unterrühren. Mit einem Löffel so unter die Mehlmischung ziehen, dass
+  diese gerade gebunden ist.
+
+  Auf die Muffinsförmchen verteilen und im vorgeheizten Ofen bei 200°
+  (Ober-"/Unterhitze) 30–35 Minuten goldbraun backen. Mit
+  \ingredient{1 TL gemahlener Zimt}
+  bestäuben.
+  
+  Ergibt 12 Stück.
+\end{recipe}
+
 \begin{recipe}{Eierlikör-Schoko-Muffins}
   \ingredient{2 Eier}
   schaumig schlagen.
