add savory muffins

--- a/muffins.tex
+++ b/muffins.tex
@@ -1,4 +1,60 @@
-\section{Muffins}
+\section{Savoury Muffins}
+
+\begin{recipe}{Carla's Leek and Cheese Muffins}
+  \ingredient{175\,g Weizenmehl}
+  \ingredient{1 TL Backpulver}
+  \ingredient{\sfrac{1}{4} TL Natron}
+  \ingredient{\sfrac{1}{2} TL Piment}
+  in einer Rührschüssel vermischen.
+
+  \ingredient{1 Ei}
+  verquirlen, mit
+  \ingredient{50\,ml Milch}
+  \ingredient{100\,ml Pflanzenöl}
+  unter die Trockenmasse rühren.
+
+  \ingredient{1 Stange Lauch (nur weißer/hellgrüner Teil)}
+  \ingredient{75\,g Cheddar}
+  fein hacken, unterheben.
+
+  Bei 180° (Ober-"/Unterhitze) ca. 25 Minuten im vorgeheizten
+  Backofen backen.
+  
+  Ergibt 10 Stück.
+\end{recipe}
+
+\begin{recipe}{Cornbread Muffins}
+  \ingredient{85\,g Butter}
+  in einer Pfanne zerlassen.
+
+  \ingredient{1 kleine Zwiebel}
+  \ingredient{1 Habanero, entkernt}
+  fein hacken, mit
+  \ingredient{1 Dose Mais}
+  in der Butter ca. 5–10 Minuten garen.
+
+  \ingredient{140\,g Weizenmehl}
+  \ingredient{140\,g Maismehl}
+  \ingredient{2 TL Backpulver}
+  \ingredient{50\,g kräftiger Cheddar, geraspelt}
+  \ingredient{1 TL Salz}
+  in einer Rührschüssel vermischen.
+
+  \ingredient{2 Eier}
+  \ingredient{300\,ml Buttermilch}
+  \ingredient{100\,ml Milch}
+  verquirlen, mit der Trockenmasse verrühren.
+
+  Das Gemüse aus der Pfanne inkl. Butter unter den Teig heben.
+  
+  Bei 200° (Ober-"/Unterhitze) ca. 25 Minuten im vorgeheizten
+  Backofen backen.
+  
+  Ergibt 18 Stück.
+\end{recipe}
+
+
+\section{Sweet Muffins}
 
 \begin{recipe}{Muffins (Basisrezept)}
   \ingredient{200\,g Weizenmehl}
